--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/morpho-blue"]
+	path = lib/morpho-blue
+	url = https://github.com/morpho-org/morpho-blue
 [submodule "lib/openzeppelin-solc-0.6"]
 	path = lib/openzeppelin-solc-0.6
 	url = https://github.com/openzeppelin/openzeppelin-contracts
@@ -24,3 +27,4 @@
 	path = lib/uniswap-v3-periphery-0.8
 	url = https://github.com/Uniswap/v3-periphery.git
 	branch = 0.8
+
