test: arbitrum testing setup (#1259)
* test: curve price feed arbitrum

* test: arbitrum testing scaffolding and aave v3 tests

* test: curve arbitrum utils

* test: arbitrum in ci.yaml

* test: fix isEeth balance util

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,7 @@ jobs:
         env:
           ETHEREUM_NODE_MAINNET: ${{ secrets.ETHEREUM_NODE_MAINNET }}
           ETHEREUM_NODE_POLYGON: ${{ secrets.ETHEREUM_NODE_POLYGON }}
+          ETHEREUM_NODE_ARBITRUM: ${{ secrets.ETHEREUM_NODE_ARBITRUM }}
 
       - name: Check linting & formatting
         run: make lint
