--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ETHEREUM_NODE_MAINNET=
-ETHEREUM_NODE_POLYGON=
+ETHEREUM_NODE_POLYGON=https://rpc.tenderly.co/fork/cc5260c1-7d34-4159-824e-811d175701e9
 ETHEREUM_NODE_ARBITRUM=
 
 ETHERSCAN_API_KEY_MAINNET=
